syntax = "proto3";

package tensornet;

option cc_generic_services = true;

message SparsePullRequest {
    uint32 table_handle = 1;
    uint32 dim = 2;

    repeated uint64 signs = 3;
};

message SparsePullResponse {
    uint32 table_handle = 1;
    uint32 dim = 2;
};

message SparsePushRequest {
    uint32 table_handle = 1;
    uint32 dim = 2;
};

message SparsePushResponse {
    uint32 table_handle = 1;
};

message DensePushPullRequest {
    uint32 table_handle = 1;
};

message DensePushPullResponse {
};

message DatasetPullRequest {
    uint32 req_shard_id = 1;
    uint32 balance_handle = 2;
};

message DatasetPullResponse {
    uint32 resp_shard_id = 1;
    bool end_of_sequence = 2;
    bytes dataset_info = 3;
};

message BnVarsPullRequest {
	uint32 req_shard_id = 1;
	uint32 table_handle = 2;
};

message BnVarsPullResponse {
	uint32 resp_shard_id = 1;
    uint32 table_handle = 2;
};

service PsService {
    rpc SparsePull(SparsePullRequest) returns (SparsePullResponse);
    rpc SparsePush(SparsePushRequest) returns (SparsePushResponse);
    rpc DensePushPull(DensePushPullRequest) returns (DensePushPullResponse);
    rpc DatasetPull(DatasetPullRequest) returns (DatasetPullResponse);
    rpc BnVarsPull(BnVarsPullRequest) returns (BnVarsPullResponse);
};
